# imagedetection

./: package-lock.json  pyproject.toml  requirements.txt
image/: models.py  urls.py  utils.py  views.py
image/migrations/: 0001_initial.py  0002_alter_image_image_after_alter_image_image_before.py
imagedetection/: asgi.py  settings.py  urls.py  wsgi.py
static/: progressbar.js
template/: final_page.html  image_element_detection.html  upload_image.html
template/layout/: basic.html
