[tool.poetry]
name = "imagedetection"
version = "0.1.0"
description = ""
authors = ["MankoMax <fanatscape@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
Pillow = "^9.3.0"
easyocr = "^1.6.2"
opencv-contrib-python = "^4.7.0"
opencv-python = "4.5.5.64"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
